Bug 458844 - "Shade" button disappears from tittle bar when returning from full screen.
Summary: "Shade" button disappears from tittle bar when returning from full screen.
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: decorations (show other bugs)
Version: 5.25.4
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-09-07 16:21 UTC by Eridani Rodríguez
Modified: 2022-09-08 19:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eridani Rodríguez 2022-09-07 16:21:00 UTC
SUMMARY
***
When having the Shade window button on the tittle bar, and going full screen then exiting said state, the Shade button will disappear from the tittle bar until the tittle bar is forced to be redrawn, e.g. making the windows borderless and bordered again.
***


STEPS TO REPRODUCE
1. From Window Decorations settings, place the “Shade” button in the tittle bar.
2. Open any application and go full screen, (Firefox or Dolphin, for example).
3. Exit full screen.

OBSERVED RESULT
The application have lost the Shade button.

EXPECTED RESULT
The Shade button should be there along with the rest.

SOFTWARE/OS VERSIONS
Operating System: KDE neon 5.25
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.97.0
Qt Version: 5.15.5
Kernel Version: 5.15.0-46-generic (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce GTX 1060 3GB/PCIe/SSE2

ADDITIONAL INFORMATION
Possibly duplicate of https://bugs.kde.org/show_bug.cgi?id=453282 , but if not, at least it should be related. In that bug report only the rightmost button disappear, but in this one, rightmost button is fine, all buttons are fine, except for the “Shade” button, doesn't matter where it is placed, left, right, leftmost, rightmost, it always and only the “Shade” button disappears.
Comment 1 Marco Martin 2022-09-08 15:37:42 UTC
can reproduce.
here i see a little difference between different applications, it happens for some it doesn't for others

in konsole for instance if i fullscreen client side with f11 the shade button is maintained, if i go server side from the window deco option, the shade button goes away.

for firefox the button always disappear
Comment 2 Bug Janitor Service 2022-09-08 16:06:48 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2919
Comment 3 Marco Martin 2022-09-08 19:46:01 UTC
Git commit a0385c330b5abd01899f7bc78e5e878bacf95eb7 by Marco Martin.
Committed on 08/09/2022 at 19:45.
Pushed by mart into branch 'master'.

updateAllowedActions when going in/out fullscreen

when going in/out of fullscreen call updateAllowedActions to notify the
decoration of eventual allowed actions changed. this makes the shade
button reappear as needed

M  +1    -1    src/window.h
M  +1    -1    src/x11window.cpp

https://invent.kde.org/plasma/kwin/commit/a0385c330b5abd01899f7bc78e5e878bacf95eb7